new structure requirejs

--- a/ESHeatMap.html
+++ b/ESHeatMap.html
@@ -7,7 +7,7 @@
             src="js/third-js-libs/include-3rdlibs.js"></script>
     <script type="text/javascript" src="js/supermap-libs/iclient9-leaflet.js"></script>
     <link rel="stylesheet" href="js/supermap-libs/iclient9-leaflet.css"/>
-    <script type="text/javascript" src="js/base-libs/require.js"></script>
+    <script type="text/javascript" src="js/base-libs/esl.source.js"></script>
     <style>
         .bootstrap-select {
             width: 168px !important;
