--- a/ESHeatMap.html
+++ b/ESHeatMap.html
@@ -51,7 +51,7 @@
             speed: 90000,
             frequency: 1000
         };
-        control.initjs(map, liveRenderer, liveDataSet, shippos_options);
+        control.initjs(map, liveRenderer, liveDataSet, flights_options);
     });
 </script>
 </body>
