--- a/login.html
+++ b/login.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description"
-          content="Metro, a sleek, intuitive, and powerful framework for faster and easier web development for Windows Metro Style.">
-    <meta name="keywords" content="HTML, CSS, JS, JavsaScript, framework, metro, front-end, frontend, web development">
-    <meta name="author" content="Sergey Pimenov and Metro UI CSS contributors">
-    <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico'/>
+    <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico'/>
     <title>Login</title>
     <link href="js/ui-libs/metro/css/metro.css" rel="stylesheet">
     <link href="js/ui-libs/metro/css/metro-icons.css" rel="stylesheet">
@@ -32,21 +28,8 @@
         }
     </style>
     <script>
-
-        if (window.location.hostname !== 'localhost') {
-
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-58849249-3', 'auto');
-            ga('send', 'pageview');
-
-        }
         $(function () {
             var form = $(".login-form");
-
             form.css({
                 opacity: 1,
                 "-webkit-transform": "scale(1)",
@@ -77,6 +60,7 @@
         </div>
         <br/>
         <br/>
+
         <div class="form-actions">
             <button type="submit" class="button primary">Login to...</button>
             <button type="button" class="button link">Cancel</button>
