--- a/login.html
+++ b/login.html
@@ -11,12 +11,67 @@
             width: 500px;
             height: auto;
             top: 50%;
+            left: 20%;
+            margin-top: -160px;
+        }
+
+        .container {
+            width: 500px;
+            height: auto;
+            top: 15%;
+            right: 20%;
             margin-top: -160px;
         }
     </style>
     <script src="js_libs/third-js-libs/include-3rdlibs.js" include="metro.v4" excepts="leaflet"></script>
+    <script>
+        function validateForm() {
+            $(".login-form").animate({
+                opacity: 0
+            });
+        }
+        function customCube(element) {
+            var sides = ['top', 'left', 'right'];
+
+            function toggle(cell, func, timeout) {
+                var side = cell.data("side");
+                var id = cell.data("id");
+                var array = Array(window["a_" + side]);
+                setTimeout(function () {
+                    if (func === 'on') {
+                        cell.addClass("light");
+                        array.push(id);
+                    } else {
+                        cell.removeClass("light");
+                        array.splice(array.indexOf(id), 1);
+                    }
+                }, timeout);
+            }
+
+            var t = 1;
+            $.each(sides, function () {
+                for (var i = 1; i <= 8; i++) {
+                    var array = Array(window["a_" + this]);
+                    var id, timeout = Metro.utils.random(100, 500), cell;
+                    do {
+                        id = Metro.utils.random(1, 64);
+                    } while (array.indexOf(id) > -1);
+
+                    cell = $(element).find("." + this + "-side .cell-id-" + id);
+
+                    toggle(cell, 'on', 100 * t);
+                    toggle(cell, 'off', 200 * t);
+                    t++;
+                }
+            });
+
+            setTimeout(function () {
+                customCube(element);
+            }, 2000);
+        }
+    </script>
 </head>
-<body class="h-vh-100 bg-brandColor2">
+<body class="h-vh-100 bg-dark">
 <form class="login-form bg-white p-6 mx-auto border bd-default win-shadow"
       data-role="validator"
       action="javascript:"
@@ -38,23 +93,10 @@
         <button class="button">Login</button>
     </div>
 </form>
-
-
-<script>
-    function invalidForm() {
-        var form = $(this);
-        form.addClass("ani-ring");
-        setTimeout(function () {
-            form.removeClass("ani-ring");
-        }, 2000);
-    }
-
-    function validateForm() {
-        $(".login-form").animate({
-            opacity: 0
-        });
-    }
-</script>
-
+<div class="container">
+    <h1 class='text-center fg-white'><span class="mif-yelp"></span> Media Manage Center</h1>
+    <div class="mt-6" id="demo-cube" data-role="cube" data-custom="customCube" data-cells="8" data-margin="2"></div>
+</div>
+<a class="fg-white mr-20 mb-20 pos-fixed pos-bottom-right"><span class="mif-codepen"></span>MMC Designed By CSNight</a>
 </body>
 </html>
